--- a/src/css/style.css
+++ b/src/css/style.css
@@ -563,6 +563,27 @@ hr {
     width: 100%; }
 
 /* последним поддтягиваем media потому как иначе будет сначало читать медиа а потом уже основной код */
+@media (max-width: 1400px) {
+  .animated {
+    /*CSS transitions*/
+    -o-transition-property: none !important;
+    -moz-transition-property: none !important;
+    -ms-transition-property: none !important;
+    -webkit-transition-property: none !important;
+    transition-property: none !important;
+    /*CSS transforms*/
+    -o-transform: none !important;
+    -moz-transform: none !important;
+    -ms-transform: none !important;
+    -webkit-transform: none !important;
+    transform: none !important;
+    /*CSS animations*/
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+    -o-animation: none !important;
+    -ms-animation: none !important;
+    animation: none !important; } }
+
 @media (max-width: 1200px) {
   .carousel .container {
     max-width: 820px; }
