--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @import 'libs/fonts';
 @import 'libs/slick';
 @import 'libs/animate';
+@import 'libs/tiny_slyder';
 
 @import 'base/variables';
 @import 'base/mixins';
